#615 Fixed action image alignment issue in properties (#616)

--- a/canvas_modules/common-canvas/src/common-properties/actions/image/image.scss
+++ b/canvas_modules/common-canvas/src/common-properties/actions/image/image.scss
@@ -20,12 +20,9 @@
 .properties-action-image  {
 	padding: 1px 2px;
 	cursor: pointer;
-	&.right {
-		margin-left: auto;
-		float: right;
-	}
+	align-self: flex-end;
 	&.left {
-		float: left;
+		order: -1;
 	}
 	&.hide {
 		display: none;
